Fit default Remark images to 80% width to avoid cropping

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h3 {
 }
 
 img {
-  width: 100%;
+  width: 80%;
 }
 
 .floatRight img {
